--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="key_show_as">show_as</string>
+    <string name="key_units">units</string>
+    <string name="key_decimal_places">decimal_places</string>
 </resources>
