--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -24,6 +24,7 @@
         <item>MEBI</item>
         <item>GIBI</item>
         <item>PCT_LIMIT</item>
+        <item>PCT_WARNING</item>
     </string-array>
 
     <string-array name="decimal_places_entries">
