--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="@string/display">
-        <ListPreference
-            android:key="@string/key_units"
-            android:title="@string/units"
-            android:summary="@string/units_summary"
-            android:entries="@array/units_entries"
-            android:entryValues="@array/units_entries_values"
-            android:dialogTitle="@string/units" />
+    <PreferenceCategory android:title="@string/pref_category_display">
+        <CheckBoxPreference
+            android:key="@string/pref_only_when_mobile_key"
+            android:title="@string/pref_only_when_mobile_title"
+            android:summary="@string/pref_only_when_mobile_summary" />
 
         <ListPreference
-            android:key="@string/key_decimal_places"
-            android:title="@string/decimal_places"
-            android:summary="@string/decimal_places_summary"
+            android:key="@string/pref_units_key"
+            android:title="@string/pref_units_title"
+            android:summary="@string/pref_units_summary"
+            android:entries="@array/units_entries"
+            android:entryValues="@array/units_entries_values"
+            android:dialogTitle="@string/pref_units_title" />
+
+        <ListPreference
+            android:key="@string/pref_decimal_places_key"
+            android:title="@string/pref_decimal_places_title"
+            android:summary="@string/pref_decimal_places_summary"
             android:entries="@array/decimal_places_entries"
             android:entryValues="@array/decimal_places_entries"
-            android:dialogTitle="@string/decimal_places" />
+            android:dialogTitle="@string/pref_decimal_places_title" />
     </PreferenceCategory>
 </PreferenceScreen>
