--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,8 +10,8 @@
         <item>KiB</item>
         <item>MiB</item>
         <item>GiB</item>
-        <item>% of limit value</item>
-        <item>% of warning value</item>
+        <item>% of limit</item>
+        <item>% of warning</item>
     </string-array>
     <string-array name="units_entries_values">
         <item>SMART_SI</item>
