--- a/app/src/main/res/values/prefs.xml
+++ b/app/src/main/res/values/prefs.xml
@@ -6,6 +6,10 @@
     <string name="pref_only_when_mobile_title">Show only when mobile</string>
     <string name="pref_only_when_mobile_summary">Show only when connected to a mobile data network</string>
 
+    <string name="pref_relative_to_pace_key">relative_to_pace</string>
+    <string name="pref_relative_to_pace_title">Relative to cycle pace</string>
+    <string name="pref_relative_to_pace_summary">Calculate usage relative to the usage you should be at for the time spend in the current cycle</string>
+
     <string name="pref_units_key">units</string>
     <string name="pref_units_title">Units</string>
     <string name="pref_units_summary">The units to use to format the data</string>
