--- a/app/src/main/res/values/prefs.xml
+++ b/app/src/main/res/values/prefs.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="pref_category_launcher">Launcher settings</string>
+    <string name="pref_app_show_in_launcher_key">app_show_in_launcher</string>
+    <string name="pref_app_show_in_launcher_title">Show in launcher</string>
+    <string name="pref_app_show_in_launcher_summary">May need a few seconds or a reboot to take effect. When off, you can access this page from the Xposed app\'s modules section</string>
+
     <string name="pref_category_display">Display Settings</string>
 
     <string name="pref_only_when_mobile_key">only_when_mobile</string>
