--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -39,4 +39,12 @@
             android:summary="@string/pref_decimal_places_summary"
             android:title="@string/pref_decimal_places_title" />
     </PreferenceCategory>
+
+    <PreferenceCategory android:title="@string/pref_category_dev">
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/pref_debug_logging_key"
+            android:summary="@string/pref_debug_logging_summary"
+            android:title="@string/pref_debug_logging_title" />
+    </PreferenceCategory>
 </PreferenceScreen>
