--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -41,7 +41,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/pref_category_dev">
-        <CheckBoxPreference
+        <SwitchPreference
             android:defaultValue="false"
             android:key="@string/pref_debug_logging_key"
             android:summary="@string/pref_debug_logging_summary"
