--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -38,6 +38,14 @@
             android:key="@string/pref_decimal_places_key"
             android:summary="@string/pref_decimal_places_summary"
             android:title="@string/pref_decimal_places_title" />
+
+        <ListPreference
+            android:defaultValue="false"
+            android:entries="@array/num_lines_entries"
+            android:entryValues="@array/num_lines_entries"
+            android:key="@string/pref_num_lines_key"
+            android:summary="@string/pref_num_lines_summary"
+            android:title="@string/pref_num_lines_title" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/pref_category_dev">
