--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,53 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="entry_smart_si">Smart SI</string>
-    <string name="entry_smart_metric">Smart Metric</string>
-    <string name="entry_b">B</string>
-    <string name="entry_kb">KB</string>
-    <string name="entry_mb">MB</string>
-    <string name="entry_gb">GB</string>
-    <string name="entry_kib">KiB</string>
-    <string name="entry_mib">MiB</string>
-    <string name="entry_gib">GiB</string>
-    <string name="entry_pct_limit">% of limit</string>
-    <string name="entry_pct_warning">% of warning</string>
+    <string name="entry_unit_smart_si">Smart SI</string>
+    <string name="entry_unit_smart_metric">Smart Metric</string>
+    <string name="entry_unit_b">B</string>
+    <string name="entry_unit_kb">KB</string>
+    <string name="entry_unit_mb">MB</string>
+    <string name="entry_unit_gb">GB</string>
+    <string name="entry_unit_kib">KiB</string>
+    <string name="entry_unit_mib">MiB</string>
+    <string name="entry_unit_gib">GiB</string>
+    <string name="entry_unit_pct_limit">% of limit</string>
+    <string name="entry_unit_pct_warning">% of warning</string>
     <string-array name="units_entries">
-        <item>@string/entry_smart_si</item>
-        <item>@string/entry_smart_metric</item>
-        <item>@string/entry_b</item>
-        <item>@string/entry_kb</item>
-        <item>@string/entry_mb</item>
-        <item>@string/entry_gb</item>
-        <item>@string/entry_kib</item>
-        <item>@string/entry_mib</item>
-        <item>@string/entry_gib</item>
-        <item>@string/entry_pct_warning</item>
-        <item>@string/entry_pct_limit</item>
+        <item>@string/entry_unit_smart_si</item>
+        <item>@string/entry_unit_smart_metric</item>
+        <item>@string/entry_unit_b</item>
+        <item>@string/entry_unit_kb</item>
+        <item>@string/entry_unit_mb</item>
+        <item>@string/entry_unit_gb</item>
+        <item>@string/entry_unit_kib</item>
+        <item>@string/entry_unit_mib</item>
+        <item>@string/entry_unit_gib</item>
+        <item>@string/entry_unit_pct_warning</item>
+        <item>@string/entry_unit_pct_limit</item>
     </string-array>
 
-    <string name="val_smart_si">SMART_SI</string>
-    <string name="val_smart_metric">SMART_METRIC</string>
-    <string name="val_b">BYTE</string>
-    <string name="val_kb">KILO</string>
-    <string name="val_mb">MEGA</string>
-    <string name="val_gb">GIGA</string>
-    <string name="val_kib">KIBI</string>
-    <string name="val_mib">MEBI</string>
-    <string name="val_gib">GIBI</string>
-    <string name="val_pct_limit">PCT_WARNING</string>
-    <string name="val_pct_warning">PCT_LIMIT</string>
+    <string name="val_unit_smart_si">SMART_SI</string>
+    <string name="val_unit_smart_metric">SMART_METRIC</string>
+    <string name="val_unit_b">BYTE</string>
+    <string name="val_unit_kb">KILO</string>
+    <string name="val_unit_mb">MEGA</string>
+    <string name="val_unit_gb">GIGA</string>
+    <string name="val_unit_kib">KIBI</string>
+    <string name="val_unit_mib">MEBI</string>
+    <string name="val_unit_gib">GIBI</string>
+    <string name="val_unit_pct_limit">PCT_WARNING</string>
+    <string name="val_unit_pct_warning">PCT_LIMIT</string>
     <string-array name="units_entries_values">
-        <item>@string/val_smart_si</item>
-        <item>@string/val_smart_metric</item>
-        <item>@string/val_b</item>
-        <item>@string/val_kb</item>
-        <item>@string/val_mb</item>
-        <item>@string/val_gb</item>
-        <item>@string/val_kib</item>
-        <item>@string/val_mib</item>
-        <item>@string/val_gib</item>
-        <item>@string/val_pct_warning</item>
-        <item>@string/val_pct_limit</item>
+        <item>@string/val_unit_smart_si</item>
+        <item>@string/val_unit_smart_metric</item>
+        <item>@string/val_unit_b</item>
+        <item>@string/val_unit_kb</item>
+        <item>@string/val_unit_mb</item>
+        <item>@string/val_unit_gb</item>
+        <item>@string/val_unit_kib</item>
+        <item>@string/val_unit_mib</item>
+        <item>@string/val_unit_gib</item>
+        <item>@string/val_unit_pct_warning</item>
+        <item>@string/val_unit_pct_limit</item>
     </string-array>
 
     <string-array name="decimal_places_entries">
@@ -55,6 +55,42 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+    </string-array>
+
+    <string name="entry_align_left">Left</string>
+    <string name="entry_align_center">Center</string>
+    <string name="entry_align_right">Right</string>
+    <string-array name="alignment_entries">
+        <item>@string/entry_align_left</item>
+        <item>@string/entry_align_center</item>
+        <item>@string/entry_align_right</item>
+    </string-array>
+
+    <string name="val_align_left">LEFT</string>
+    <string name="val_align_center">CENTER</string>
+    <string name="val_align_right">RIGHT</string>
+    <string-array name="alignment_entries_values">
+        <item>@string/val_align_left</item>
+        <item>@string/val_align_center</item>
+        <item>@string/val_align_right</item>
+    </string-array>
+
+    <string name="entry_position_far_left">Left of notification icons</string>
+    <string name="entry_position_right">Left of system icons</string>
+    <string name="entry_position_far_right">Right of clock</string>
+    <string-array name="position_entries">
+        <item>@string/entry_position_far_left</item>
+        <item>@string/entry_position_right</item>
+        <item>@string/entry_position_far_right</item>
+    </string-array>
+
+    <string name="val_position_far_left">FAR_LEFT</string>
+    <string name="val_position_right">RIGHT</string>
+    <string name="val_position_far_right">FAR_RIGHT</string>
+    <string-array name="position_entries_values">
+        <item>@string/val_position_far_left</item>
+        <item>@string/val_position_right</item>
+        <item>@string/val_position_far_right</item>
     </string-array>
 
 </resources>
