--- a/app/src/main/res/values/prefs.xml
+++ b/app/src/main/res/values/prefs.xml
@@ -8,9 +8,13 @@
 
     <string name="pref_category_display">Display</string>
 
-    <string name="pref_only_when_mobile_key">only_when_mobile</string>
-    <string name="pref_only_when_mobile_title">Show only when mobile</string>
-    <string name="pref_only_when_mobile_summary">Show only when connected to a mobile data network</string>
+    <string name="pref_monitored_network_types_key">monitored_network_types</string>
+    <string name="pref_monitored_network_types_title">Network types</string>
+    <string name="pref_monitored_network_types_summary">Choose which network types will be monitored</string>
+
+    <string name="pref_only_when_connected_key">only_when_mobile</string> <!-- key must be only_when_mobile for legacy reasons -->
+    <string name="pref_only_when_connected_title">Show only when connected</string>
+    <string name="pref_only_when_connected_summary">Show only when connected to an enabled network</string>
 
     <string name="pref_relative_to_pace_key">relative_to_pace</string>
     <string name="pref_relative_to_pace_title">Relative to cycle pace</string>
